option('valgrind', type: 'boolean', value: false, description: 'Enable valgrind memory checks')
option('backtrace', type: 'boolean', value: false, description: 'Enable backtrace support')
option('library', type: 'boolean', value: true, description: 'Install Bluetooth library')
option('examples', type: 'boolean', value: false, description: 'Enable test/example scripts')
option('tests', type: 'boolean', value: false, description: 'Enable testing tools')
option('tools', type: 'boolean', value: true, description: 'Enable Bluetooth tools')
option('monitor', type: 'boolean', value: true, description: 'Enable Bluetooth monitor')
option('client', type: 'feature', value: 'enabled', description: 'Enable command line client')
option('systemd', type: 'boolean', value: true, description: 'Enable systemd integration')
option('udev', type: 'feature', value: 'enabled', description: 'Enable udev device support')
option('datafiles', type: 'boolean', value: true, description: 'Install configuration and data files')
option('manpages', type: 'feature', value: 'auto', description: 'Enable building of manual pages')
option('experimental', type: 'boolean', value: false, description: 'Enable experimental tools')
option('deprecated', type: 'boolean', value: false, description: 'Enable deprecated tools')
option('external-plugins', type: 'boolean', value: true, description: 'Enable support for external plugins')

option('dbusconfdir', type: 'string', value: '', description: 'D-Bus configuration directory')
option('dbussystembusdir', type: 'string', value: '', description: 'D-Bus system bus services dir')
option('dbussessionbusdir', type:'string', value: '', description: 'D-Bus session bus services dir')
option('systemdsystemunitdir', type: 'string', value: '', description: 'path to systemd system unit directory')
option('systemduserunitdir', type: 'string', value: '', description: 'systemd user unit dir')
option('zsh-completion-dir', type:'string', value: '', description: 'Path to install zsh completions')
option('udevdir', type: 'string', value: '', description: 'udev directory')
option('cups_serverbin', type: 'string', value: '', description: 'CUPS directory')

option('nfc', type: 'boolean', value: false, description: 'Enable NFC pairing')
option('sap', type: 'boolean', value: false, description: 'Enable SAP profile')
option('a2dp', type: 'boolean', value: true, description: 'Enable A2DP profile')
option('avrcp', type: 'boolean', value: true, description: 'Enable AVRCP profile')
option('network', type: 'boolean', value: true, description: 'Enable network profiles')
option('hid', type: 'boolean', value: true, description: 'Enable HID profile')
option('hog', type: 'boolean', value: true, description: 'Enable HoG profile')
option('health', type: 'boolean', value: false, description: 'Enable health profiles')
option('bap', type: 'boolean', value: true, description: 'Enable BAP profile')
option('bass', type: 'boolean', value: true, description: 'Enable BASS service')
option('mcp', type: 'boolean', value: true, description: 'Enable MCP profile')
option('ccp', type: 'boolean', value: true, description: 'Enable CCP profile')
option('vcp', type: 'boolean', value: true, description: 'Enable VCP profile')
option('micp', type: 'boolean', value: true, description: 'Enable MICP profile')
option('csip', type: 'boolean', value: true, description: 'Enable CSIP profile')
option('asha', type: 'boolean', value: true, description: 'Enable ASHA support')
option('cups', type: 'feature', value: 'auto', description: 'Enable CUPS printer support')
option('mesh', type: 'feature', value: 'auto', description: 'Enable Mesh profile support')
option('midi', type: 'feature', value: 'auto', description: 'Enable MIDI support')
option('obex', type: 'feature', value: 'auto', description: 'Enable OBEX profile support')
option('btpclient', type: 'boolean', value: true, description: 'Enable BTP client')
option('sixaxis', type: 'boolean', value: true, description: 'Enable sixaxis plugin')
option('hid2hci', type: 'boolean', value: true, description: 'Enable hid2hci tool')
option('logger', type: 'boolean', value: false, description: 'Enable HCI logger service')
option('admin', type: 'boolean', value: true, description: 'Enable admin policy plugin')
option('phonebook', type: 'combo', choices: [ 'dummy', 'ebook' ], value: 'dummy', description: 'Obexd phonebook plugin')
