option('valgrind', type: 'feature', value: 'disabled', description: 'Enable valgrind memory checks')
option('backtrace', type: 'feature', value: 'disabled', description: 'Enable backtrace support')
option('library', type: 'feature', value: 'enabled', description: 'Install Bluetooth library')
option('examples', type: 'feature', value: 'auto', description: 'Enable test/example scripts')
option('tests', type: 'feature', value: 'auto', description: 'Enable testing tools')
option('tools', type: 'feature', value: 'enabled', description: 'Enable Bluetooth tools')
option('monitor', type: 'feature', value: 'enabled', description: 'Enable Bluetooth monitor')
option('client', type: 'feature', value: 'enabled', description: 'Enable command line client')
option('daemon', type: 'feature', value: 'enabled', description: 'Enable bluetoothd daemon')
option('systemd', type: 'feature', value: 'enabled', description: 'Install systemd service files')
option('logind', type: 'feature', value: 'enabled', description: 'Enable logind integration in obexd')
option('udev', type: 'feature', value: 'enabled', description: 'Enable udev device support')
option('datafiles', type: 'feature', value: 'enabled', description: 'Install configuration and data files')
option('manpages', type: 'feature', value: 'auto', description: 'Enable building of manual pages')
option('experimental', type: 'feature', value: 'disabled', description: 'Enable experimental tools')
option('deprecated', type: 'feature', value: 'disabled', description: 'Enable deprecated tools')
option('external-plugins', type: 'feature', value: 'enabled', description: 'Enable support for external plugins')

option('dbusconfdir', type: 'string', value: '', description: 'D-Bus configuration directory')
option('dbussystembusdir', type: 'string', value: '', description: 'D-Bus system bus services dir')
option('dbussessionbusdir', type:'string', value: '', description: 'D-Bus session bus services dir')
option('systemdsystemunitdir', type: 'string', value: '', description: 'path to systemd system unit directory')
option('systemduserunitdir', type: 'string', value: '', description: 'systemd user unit dir')
option('zsh-completion-dir', type:'string', value: '', description: 'Path to install zsh completions')
option('udevdir', type: 'string', value: '', description: 'udev directory')
option('cups_serverbin', type: 'string', value: '', description: 'CUPS directory')

option('nfc', type: 'feature', value: 'disabled', description: 'Enable NFC pairing')
option('sap', type: 'feature', value: 'disabled', description: 'Enable SAP profile')
option('a2dp', type: 'feature', value: 'auto', description: 'Enable A2DP profile')
option('avrcp', type: 'feature', value: 'auto', description: 'Enable AVRCP profile')
option('network', type: 'feature', value: 'auto', description: 'Enable network profiles')
option('hid', type: 'feature', value: 'auto', description: 'Enable HID profile')
option('hog', type: 'feature', value: 'auto', description: 'Enable HoG profile')
option('health', type: 'feature', value: 'disabled', description: 'Enable health profiles')
option('bap', type: 'feature', value: 'auto', description: 'Enable BAP profile')
option('bass', type: 'feature', value: 'auto', description: 'Enable BASS service')
option('mcp', type: 'feature', value: 'auto', description: 'Enable MCP profile')
option('ccp', type: 'feature', value: 'auto', description: 'Enable CCP profile')
option('vcp', type: 'feature', value: 'auto', description: 'Enable VCP profile')
option('micp', type: 'feature', value: 'auto', description: 'Enable MICP profile')
option('csip', type: 'feature', value: 'auto', description: 'Enable CSIP profile')
option('asha', type: 'feature', value: 'auto', description: 'Enable ASHA support')
option('cups', type: 'feature', value: 'auto', description: 'Enable CUPS printer support')
option('mesh', type: 'feature', value: 'auto', description: 'Enable Mesh profile support')
option('midi', type: 'feature', value: 'auto', description: 'Enable MIDI support')
option('obex', type: 'feature', value: 'auto', description: 'Enable OBEX profile support')
option('btpclient', type: 'feature', value: 'auto', description: 'Enable BTP client')
option('sixaxis', type: 'feature', value: 'auto', description: 'Enable sixaxis plugin')
option('hid2hci', type: 'feature', value: 'auto', description: 'Enable hid2hci tool')
option('logger', type: 'feature', value: 'disabled', description: 'Enable HCI logger service')
option('admin', type: 'feature', value: 'auto', description: 'Enable admin policy plugin')
option('phonebook', type: 'combo', choices: [ 'dummy', 'ebook' ], value: 'dummy', description: 'Obexd phonebook plugin')
